<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.05"
            android:text="@string/covid_19"
            android:textColor="#393e46"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/search" />
    </RelativeLayout>
<androidx.cardview.widget.CardView
    android:layout_width="380dp"
    android:layout_height="180dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:padding="30dp"
    app:cardBackgroundColor="#393e46"
    android:layout_marginStart="16dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency"
            android:textColor="#32e0c4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/how_to_know_if_i_have_covid_19"
            android:textColor="#fff"
            android:textSize="23sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp">

            <Button
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:backgroundTint="#32e0c4"
                android:text="@string/call_now"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#393e46"
                android:text="@string/guide"
                android:textColor="#32e0c4"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid_19_guide"
            android:textSize="26sp"
            android:textColor="#393e46"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:text="@string/symptoms"
                android:textColor="#32e0c4"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indications"
                android:textSize="16sp"
                android:textColor="#393e46"
                android:letterSpacing="0.02"
                android:layout_marginStart="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention"
                android:textSize="16sp"
                android:textColor="#393e46"
                android:letterSpacing="0.02"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contagion"
                android:textSize="16sp"
                android:textColor="#393e46"
                android:letterSpacing="0.02"
                android:layout_marginStart="15dp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="#393e46"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/high_fever"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high_fever"
                            android:fontFamily="sans-serif-black"
                            android:textSize="18sp"
                            android:textColor="#32e0c4"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_37_40"
                            android:fontFamily="sans-serif-black"
                            android:textSize="13sp"
                            android:textColor="#fff"
                            android:layout_marginTop="2dp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="#393e46"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/fever"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dry_cough"
                            android:fontFamily="sans-serif-black"
                            android:textSize="18sp"
                            android:textColor="#32e0c4"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uncontrollable"
                            android:fontFamily="sans-serif-black"
                            android:textSize="13sp"
                            android:textColor="#fff"
                            android:layout_marginTop="2dp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="#393e46"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/fever"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fatigue"
                            android:fontFamily="sans-serif-black"
                            android:textSize="18sp"
                            android:textColor="#32e0c4"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dream"
                            android:fontFamily="sans-serif-black"
                            android:textSize="13sp"
                            android:textColor="#fff"
                            android:layout_marginTop="2dp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="210dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:padding="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:background="@drawable/big_card"
                android:orientation="vertical"
                android:paddingStart="35dp"
                android:paddingTop="35dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/be_aware_nfrom_covid_19"
                    android:textColor="#393e46"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#393e46"
                    android:text="@string/learn_more"
                    android:textColor="#32e0c4"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>