<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="277dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_img" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_you_nedd_nknow_about_covid_19"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="#32e0c4"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.03"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coronavirus_covid_19_is_an_ninfectious_disease_caused_by_a_newly_ndiscoverd_coronavirus"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#fff"
        android:letterSpacing="0.05"
        android:layout_marginTop="20dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#222831">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_now"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#32e0c4"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/start"
                android:layout_width="15dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/next"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:src="@drawable/dot"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />

</LinearLayout>